Mobil scroll ve navbar/header düzeltmeleri

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 
   <div class="auth-screen">
   <div class="auth-image">
-    <img src="asset/images/loginregister.png" alt="login image">
+    <img src="asset/images/mypets_logo_cropped.png" alt="login image">
   </div>
   <h2 class="auth-title">login</h2>
 
@@ -39,7 +39,7 @@
 
   <div class="options">
     <label><input type="checkbox"> Remember me</label>
-    <a href="#">Forget password</a>
+    <a href="#"  >Forget password</a>
   </div>
 
   <button class="btn-main">Continue</button>
@@ -51,9 +51,8 @@
     <button class="apple">Apple</button>
   </div>
 
-  <p class="terms">
-    By clicking create account you agree to resonates  
-    <a href="#">Terms of use</a> and <a href="#">Privacy policy</a>
+  <p class="account-text">
+    Don’t have an account? <a href="register.html">Create an account</a>
   </p>
 </div>
 
