--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
   </div>
 
   <p class="account-text">
-    Don’t have an account? <a href="#">Create an account</a>
+    Do you already have an account? <a href="login.html">Log in</a>
   </p>
 </div>
 
