Mobil scroll ve navbar/header düzeltmeleri

--- a/Friends.html
+++ b/Friends.html
@@ -11,60 +11,71 @@
 <body>
 <div class="phone">
     <div class="status-bar">
-  <span class="time">12:22</span>
-  <div class="status-icons">
-    <i class="fa-solid fa-signal"></i>
-    <i class="fa-solid fa-wifi"></i>
-    <i class="fa-solid fa-battery-three-quarters"></i>
-  </div>
-  </div>
+      <span class="time" data-key="status_time">12:22</span>
+      <div class="status-icons">
+        <i class="fa-solid fa-signal"></i>
+        <i class="fa-solid fa-wifi"></i>
+        <i class="fa-solid fa-battery-three-quarters"></i>
+      </div>
+    </div>
 
     <!-- Header -->
     <header class="header">
-      <input type="text" class="search" placeholder="Search Articles...">
-     <i class="fa-solid fa-bell notification">
-     </i> 
+      <input type="text" class="search" placeholder="Search Articles..." data-key="search_placeholder">
+      <i class="fa-solid fa-bell notification"></i> 
       <img src="https://t3.ftcdn.net/jpg/06/99/46/60/360_F_699466075_DaPTBNlNQTOwwjkOiFEoOvzDV0ByXR9E.jpg" class="profile" alt="Profile">
     </header>
 
-
-
-
-
-
-
 <!-- Bottom Navbar -->
 <nav class="bottom-nav">
-  <a href="index.html" >
+  <a href="index.html" data-key="nav_home">
     <i class="fa-solid fa-house"></i>
     <span>Home</span>
   </a>
-  <a href="learn.html">
+  <a href="learn.html" data-key="nav_learn">
     <i class="fa-solid fa-book-open"></i>
     <span>Learn</span>
   </a>
-  <a href="petpost.html" class="center-btn">
-    <div class="circle" style="background-color: #9DA3B5; " >
-      <i class="fa-solid fa-paw" style="color: white; font-size: 24px;" ></i>
+  <a href="petpost.html" class="center-btn" data-key="nav_petposts">
+    <div class="circle" style="background-color: #9DA3B5;">
+      <i class="fa-solid fa-paw" style="color: white; font-size: 24px;"></i>
     </div>
     <span>Pet Posts</span>
   </a>
-  <a href="Friends.html" class="active">
+  <a href="Friends.html" class="active" data-key="nav_friends">
     <i class="fa-solid fa-cat"></i>
     <span>Friends</span>
   </a>
-  <a href="Profile.html">
+  <a href="Profile.html" data-key="nav_profile">
     <i class="fa-solid fa-user"></i>
     <span>Profil</span>
   </a>
 </nav>
 
-  </div>
-   <!-- Font Awesome için -->
-  <script src="https://kit.fontawesome.com/4f35b45f5a.js" crossorigin="anonymous"></script>
+</div>
 
-  <script src="asset/script/script.js"></script>
-    <!-- Framework7 JS -->
-  <script src="https://cdn.jsdelivr.net/npm/framework7@7/framework7-bundle.min.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const selectedLanguage = localStorage.getItem("selectedLanguage") || "EN";
+  const elements = document.querySelectorAll("[data-key]");
+  const texts = Array.from(elements).map(el => el.textContent);
+
+  fetch("http://localhost:3000/translate", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ text: texts, target_lang: selectedLanguage.toUpperCase() })
+  })
+  .then(res => res.json())
+  .then(data => {
+    elements.forEach((el, i) => {
+      if (data.translations && data.translations[i] && data.translations[i].text) {
+        el.textContent = data.translations[i].text;
+      }
+    });
+  })
+  .catch(err => console.error("Çeviri yüklenirken hata oluştu:", err));
+});
+</script>
+<script src="asset/script/script.js"></script>
 </body>
 </html>
