--- a/language.html
+++ b/language.html
@@ -40,41 +40,42 @@
   <div class="section">
     <p class="title">All Languages <a href="#">See All</a></p>
 
-    <div class="lang-list">
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">ar</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Bulgarian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Chinese</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Czech</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Danish</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Dutch</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">English (US)</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">English (UK)</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Estonian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Finnish</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">French</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">de</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Greek</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Hebrew</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Hungarian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Italian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Japanese</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Korean</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Latvian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Lithuanian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Norwegian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Polish</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Portuguese</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Romanian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Russian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Slovak</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Slovenian</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Spanish</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Swedish</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Thai</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">tr</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">uk</span><span class="radio"></span></div>
-  <div class="lang-item"><span class="icon">🌐</span><span class="text">Vietnamese</span><span class="radio"></span></div>
+<div class="lang-list">
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Arabic (ar)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Bulgarian (bg)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Chinese (zh)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Czech (cs)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Danish (da)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Dutch (nl)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">English (US) (en)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">English (UK) (en)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Estonian (et)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Finnish (fi)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">French (fr)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">German (de)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Greek (el)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Hebrew (he)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Hungarian (hu)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Italian (it)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Japanese (ja)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Korean (ko)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Latvian (lv)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Lithuanian (lt)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Norwegian (no)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Polish (pl)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Portuguese (pt)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Romanian (ro)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Russian (ru)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Slovak (sk)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Slovenian (sl)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Spanish (es)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Swedish (sv)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Thai (th)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Turkish (tr)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Ukrainian (uk)</span><span class="radio"></span></div>
+  <div class="lang-item"><span class="icon">🌐</span><span class="text">Vietnamese (vi)</span><span class="radio"></span></div>
 </div>
+
 
 
   <div class="footer">
