--- a/register.html
+++ b/register.html
@@ -18,68 +18,86 @@
 <body>
 <div class="phone">
     <div class="status-bar">
-  <span class="time">12:22</span>
-  <div class="status-icons">
-    <i class="fa-solid fa-signal"></i>
-    <i class="fa-solid fa-wifi"></i>
-    <i class="fa-solid fa-battery-three-quarters"></i>
-  </div>
-  </div>
+      <span class="time" data-key="status_time">12:22</span>
+      <div class="status-icons">
+        <i class="fa-solid fa-signal"></i>
+        <i class="fa-solid fa-wifi"></i>
+        <i class="fa-solid fa-battery-three-quarters"></i>
+      </div>
+    </div>
 
 <div class="screen signup-screen">
   <button class="back-btn"><i class="fa-solid fa-arrow-left"></i></button>
   <div class="logo-wrapper">
     <img src="asset/images/MY PETS.png" alt="Logo" class="logo" />
   </div>
-  <h2>Pets loving families</h2>
-  <p class="subtitle">
+  <h2 data-key="signup_title">Pets loving families</h2>
+  <p class="subtitle" data-key="signup_subtitle">
     Sign up to explore pets and connect with shelters.
   </p>
 
   <div class="form-group">
     <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-    <input type="email" placeholder="Enter your gmail" />
+    <input type="email" placeholder="Enter your gmail" data-key="email_placeholder" />
   </div>
   <div class="form-group">
     <span class="icon"><i class="fa-solid fa-lock"></i></span>
-    <input type="password" placeholder="Password" />
+    <input type="password" placeholder="Password" data-key="password_placeholder" />
     <span class="icon-right"><i class="fa-solid fa-eye"></i></span> 
   </div>
   <div class="form-group">
     <span class="icon"><i class="fa-solid fa-lock"></i></span>
-    <input type="password" placeholder="Confirm Password" />
+    <input type="password" placeholder="Confirm Password" data-key="confirm_password_placeholder" />
     <span class="icon-right"><i class="fa-solid fa-eye"></i></span> 
   </div>
 
-  <button class="btn primary">Sign Up</button>
+  <button class="btn primary" data-key="signup_button">Sign Up</button>
 
   <div class="divider">
-  <span class="line-left"></span>
-  <span class="text">or</span>
-  <span class="line-right"></span>
-</div>
+    <span class="line-left"></span>
+    <span class="text" data-key="divider_or">or</span>
+    <span class="line-right"></span>
+  </div>
 
-<button class="btn social google">
+<button class="btn social google" data-key="google_login">
   <img src="asset/images/Google__G__logo.svg.webp" alt="Google" />
   Log in with Google
 </button>
 
-<button class="btn social apple">
+<button class="btn social apple" data-key="apple_login">
   <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple" />
   Log in with Apple
 </button>
 
+  <p class="bottom-text" data-key="login_prompt">Already have an account? <a href="login.html">Login</a></p>
+</div>
 
-  <p class="bottom-text">Already have an account? <a href="login.html">Login</a></p>
 </div>
 
 
-  </div>
-   <!-- Font Awesome için -->
-  <script src="https://kit.fontawesome.com/4f35b45f5a.js" crossorigin="anonymous"></script>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const selectedLanguage = localStorage.getItem("selectedLanguage") || "EN";
+  const elements = document.querySelectorAll("[data-key]");
+  const texts = Array.from(elements).map(el => el.textContent);
 
-  <script src="asset/script/script.js"></script>
-    <!-- Framework7 JS -->
-  <script src="https://cdn.jsdelivr.net/npm/framework7@7/framework7-bundle.min.js"></script>
+  fetch("http://localhost:3000/translate", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ text: texts, target_lang: selectedLanguage.toUpperCase() })
+  })
+  .then(res => res.json())
+  .then(data => {
+    elements.forEach((el, i) => {
+      if (data.translations && data.translations[i] && data.translations[i].text) {
+        el.textContent = data.translations[i].text;
+      }
+    });
+  })
+  .catch(err => console.error("Çeviri yüklenirken hata oluştu:", err));
+});
+</script>
+
+<script src="asset/script/script.js"></script>
 </body>
 </html>
